# stm32-servo

./: .gitignore  .mxproject  2026a-stm32-servo.ioc  CMakeLists.txt  CONTRIBUTING.md  README.md
.github/workflows/: build.yml  release.yml
Core/Inc/: main.h  stm32g4xx_it.h  tim.h
Core/Src/: fdcan.c  gpio.c  main.c  stm32g4xx_it.c  tim.c
cmake/stm32cubemx/: CMakeLists.txt
docs/: coding-rules.md
stm32_servo/: CMakeLists.txt
stm32_servo/src/: app.cpp
